--- a/feign-common/pom.xml
+++ b/feign-common/pom.xml
@@ -75,6 +75,11 @@
             <groupId>org.gavaghan</groupId>
             <artifactId>geodesy</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
