--- a/feign-pom/pom.xml
+++ b/feign-pom/pom.xml
@@ -92,6 +92,12 @@
                 <artifactId>geodesy</artifactId>
                 <version>${geodesy.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>javax.mail</groupId>
+                <artifactId>mail</artifactId>
+                <version>1.4.5</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
